--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "node-mailer": "^0.1.1",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
-    "passport-local-mongoose": "^6.0.1"
+    "passport-local-mongoose": "^6.0.1",
+    "stripe": "^8.69.0"
   }
 }
